--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,20 +11,20 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_USER: postgres
-      - POSTGRES_PASSWORD: postgres
-      - POSTGRES_DB: lemon
+      - POSTGRES_USER= postgres
+      - POSTGRES_PASSWORD= postgres
+      - POSTGRES_DB= lemon
     ports:
       - "5432:5432"
     volumes:
-      - pgdata: /var/lib/postgresql/data 
+      - pgdata:/var/lib/postgresql/data 
   redis:
     image: redis:latest    
     restart: always
     ports:
       - "6379:6379"
     volumes:
-      - redisdata: /data  
+      - redisdata:/data  
 volumes:
   pgdata:       
   redisdata:
